[build-system]
requires = [
    'setuptools',
    'numpy',
    'Cython'
]

build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pytest.ini_options]
markers = [
    "nonumba",
]

[tool.isort]
line_length = 120
lines_after_imports = 2
profile = 'black'
combine_as_imports = true
