[build-system]
requires = [
    'setuptools',
    'numpy',
    'Cython'
]

build-backend = 'setuptools.build_meta'

[project]
name = 'imops'
dynamic = ['version']
description = 'Efficient parallelizable algorithms for multidimensional arrays to speed up your data pipelines'
readme = 'README.md'
requires-python = '>=3.6'
license = { file = 'LICENSE' }
keywords = ['image processing', 'fast', 'ndarray', 'data pipelines']
authors = [
    {name = 'maxme1', email = 'maxs987@gmail.com'},
    {name = 'vovaf709', email = 'vovaf709@yandex.ru'},
    {name = 'talgat', email = 'saparov2130@gmail.com'},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    "numpy>=1.7,<2.0.0; python_version < '3.8'",
    "numpy>=1.22,<2.0.0; python_version >= '3.8'",
    'scipy>=1.0,<2.0.0',
    "dataclasses; python_version < '3.7'",
    'Cython',
    'connected-components-3d',
    'fastremap',
]

[project.urls]
'Homepage' = 'https://github.com/neuro-ml/imops'
'Issues' = 'https://github.com/neuro-ml/imops/issues'
'Source' = 'https://github.com/neuro-ml/imops'
'Docs' = 'https://neuro-ml.github.io/imops'


[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pytest.ini_options]
markers = [
    'nonumba',
]

[tool.isort]
line_length = 120
lines_after_imports = 2
profile = 'black'
combine_as_imports = true

[tool.setuptools.packages.find]
include = ['imops']

[tool.setuptools.package-data]
imops = [
    'py.typed',
]

[tool.setuptools.dynamic]
version = {attr = 'imops.__version__.__version__'}
